testdata/bad/timestamp_66.ion
2004-12-11T12:10:11.19987x
